fix: removed horiz. scrollbars on small scaling

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -108,7 +108,7 @@ body {
 }
 
 .home-div {
-    @apply relative flex flex-col gap-4 p-8 w-screen min-h-screen items-center justify-center;
+    @apply relative flex flex-col gap-4 p-8 max-w-full min-h-screen items-center justify-center;
 }
 
 .home-subdiv {
